--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "tape": "^4.6.2"
   },
   "dependencies": {
+    "asyncro": "^2.0.1",
     "date-fns": "^1.10.0",
     "mz": "^2.5.0",
     "ramda": "^0.22.1"
