--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "ava": "^0.17.0",
+    "fs-from-object": "^0.3.0",
     "recursive-copy": "^2.0.5",
     "rmfr": "^1.0.1",
     "tap-dot": "^1.0.5",
