--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "prepublish": "async-to-gen index.js > index.out.js",
     "test": "run-s test:*",
     "test:lint": "standard --fix",
-    "test:run": "ava"
+    "test:run": "ava",
+    "release": "xyz -m X.Y.Z"
   },
   "keywords": [],
   "author": "Fabian Eichenberger <fabian.eichenberger@gmail.com> (https://github.com/queckezz)",
@@ -21,7 +22,8 @@
     "async-to-gen": "^1.1.4",
     "ava": "^0.17.0",
     "npm-run-all": "^3.1.1",
-    "standard": "^8.5.0"
+    "standard": "^8.5.0",
+    "xyz": "^2.0.1"
   },
   "dependencies": {
     "date-fns": "^1.10.0",
