--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "date-fns": "^1.10.0",
-    "fs-from-object": "^0.3.0",
+    "fs-from-object": "0.4.0",
     "mz": "^2.5.0",
     "ramda": "^0.23.0"
   }
